fix a spacing issue in tweets

--- a/src/_scss/base/tweets.scss
+++ b/src/_scss/base/tweets.scss
@@ -153,6 +153,8 @@
 
       .text {
         cursor: pointer;
+        margin-top: 0;
+        margin-bottom: 0;
       }
     }
 
